--- a/lessons/python_advanced/deep_and_shallow_copy.ipynb
+++ b/lessons/python_advanced/deep_and_shallow_copy.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Python Version: 3.8.5 (tags/v3.8.5:580fbb0, Jul 20 2020, 15:57:54) [MSC v.1924 64 bit (AMD64)] \n\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(\"Python Version:\", sys.version, '\\n')"
@@ -28,9 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "a = 5\n",
     "b = a\n",
@@ -48,9 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1,2,3,4]\n",
     "b = a\n",
@@ -59,9 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "a.append(7)\n",
     "print(b)"
@@ -76,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [5,6,7,8]\n",
     "print(b)"
@@ -86,9 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[5, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1,2,3,4]\n",
     "b = a\n",
@@ -119,9 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[4, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1,2,3,4]\n",
     "b = list(a)\n",
@@ -151,9 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, [1, 4], 5]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1,2,[3,4],5]\n",
     "b = list(a)\n",
@@ -186,9 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, [3, 6], 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1,2,[3,6],4,5]\n",
     "b = list(a)\n",
@@ -198,9 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, [9, 6], 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "a[2][0] = 9\n",
     "print(b) # Note that b does change it's internal list spot 0!"
@@ -208,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,9 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, [3, 6], 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "a[2][0] = 9\n",
     "print(b) # Note that it doesn't change once we deep copy!"
@@ -253,9 +342,13 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "2db524e06e9f5f4ffedc911c917cb75e12dbc923643829bf417064a77eb14d37"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -267,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5-final"
   },
   "toc": {
    "nav_menu": {
